# stochastic-finances

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Notes.md  Notes.txt  Outline.md  Outline.txt  PRODUCTIONIZATION_GUIDE.md  README.md  SP_calcs.xlsx  TESTING_README.md  __azurite_db_table__.json  _age_graph.xlsx  _check_calcs.xlsx  analyze_divergence.ipynb  assumptions_sam.json  db.sqlite3  full_dict.json  graphs_layouts.xlsx  input_assumptions.json  input_assumptions_bare.json  input_assumptions_full.json  input_assumptions_no_payments.json  input_assumptions_test.json  manage.py  pre-commit-config.yaml  pyproject.toml  real_data.csv  requirements.txt  sample modal and javascript.txt  scrap_sample_build_from_df.py  scrap_sample_build_from_lists.py  site_assumptions.md  stochastic_finances.py  stochastic_finances_classes.py  stochastic_finances_func.py  stochastic_finances_lists.py  test_base.csv  test_interest_fields.py  (+2 more)
Scenarios/: base_scenario.py  random_scenario.py
accounts/: admin.py  forms.py  models.py
config/: settings.py  urls.py
core/: urls.py  views.py
dashboard/: urls.py  views.py
financial_situation/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
inputs/: admin.py  apps.py  forms.py  model_validators.py  models.py  urls.py  views.py
metrics/: savings.py
pages/: admin.py  base_scenario.py  claude.md  forms.py  full_descriptions.py  model_validators.py  models.py  random_scenario.py  stochastic_finances_func.py  tests.py  urls.py  utils.py  views.py
stochastic_finances/: asgi.py  settings.py  urls.py  wsgi.py
templates/: 403_csrf.html  404.html  500.html  base.html  calculations.html  general_inputs.html  general_inputs_dashboard.html  get_started.html  index.html  inputs_create.html  login.html  non_active.html  payments_inputs.html  rates_inputs.html  retirement_inputs.html  savings_inputs.html
tests/: inputs_test.py  test_base_bills.py  test_base_bills_and_retirement.py  test_base_scenario.py  test_healthcare_and_retirement_expenses.py  test_payments.py  test_pension.py  test_random_scenario_rate_distribution.py  test_retirement.py  test_retirement_date_edge_cases.py  test_savings_interest.py  test_savings_time_period_inputs.py  test_stochastic_finances_func.py  test_trad_401k_rmd_accounting.py  test_zero_variance_random_scenario.py  utils.py
utils/: get_field_values.py  tools.py
variable_inputs/: savings.py
(+218 files in other folders)
