[tool.poetry]
name = "stochastic-finances"
version = "0.1.0"
description = "Stochastic finances description"
authors = ["Skips-Scramble <95422872+Skips-Scramble@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Django = ">=5.0.1"
django-allauth = ">=0.43.0"
django-crispy-forms = ">=1.10.0"
django-debug-toolbar = ">=3.2"
numpy-financial = ">=1.0.0"
pandas = ">=2.1.3"
plotly = ">=5.19.0"
pydantic = ">=2.5.3"
pydantic_core = ">=2.14.6"
whitenoise = ">=5.2.0"
crispy-bootstrap4 = "^2024.1"
pre-commit = "^3.8.0"
djlint = "^1.35.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
pytest = ">=7.4.4"
ruff = "^0.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
